--- a/templates/base.html
+++ b/templates/base.html
@@ -19,5 +19,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
   </body>
 </html>
